<resources>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed. You can remove it, or search for the app and install it manually.</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_resize">Resize</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="add_to_folder">Add to folder: %1$s</string>
    <string name="add_to_folder_with_app">Add to folder with %1$s</string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="all_apps_loading_message">Loading apps…</string>
    <string name="all_apps_no_search_results">No apps found matching \"%1$s\"</string>
    <string name="all_apps_personal_tab">Personal</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="all_apps_work_tab">Work</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="app_downloading_title">%1$s downloading, %2$s complete</string>
    <string name="app_filter_class" />
    <string name="app_info_drop_target_label">App info</string>
    <string name="app_name">Launcher3</string>
    <string name="app_transition_manager_class" />
    <string name="app_waiting_download_title">%1$s waiting to install</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add icon to Home screen</string>
    <string name="bottom_work_tab_user_education_body">Each work app has a badge and is kept secure by your organization. Move apps to your Home screen for easier access.</string>
    <string name="bottom_work_tab_user_education_close_button">Close</string>
    <string name="bottom_work_tab_user_education_closed">Closed</string>
    <string name="bottom_work_tab_user_education_title">Find work apps here</string>
    <string name="color_extraction_impl_class" />
    <string name="create_folder_with">Create folder with: %1$s</string>
    <string name="custom_actions">Custom actions</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="delete_package_intent">#Intent;action=android.intent.action.DELETE;launchFlags=0x10800000;end</string>
    <string name="derived_app_name">@string/app_name</string>
    <string name="disabled_app_label">Disabled %1$s</string>
    <string name="drawable_factory_class" />
    <string name="folder_closed">Folder closed</string>
    <string name="folder_created">Folder created</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="folder_name" />
    <string name="folder_name_format">Folder: %1$s</string>
    <string name="folder_opened">Folder opened, %1$d by %2$d</string>
    <string name="folder_renamed">Folder renamed to %1$s</string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="group_applications">Apps</string>
    <string name="group_applications2">Applications</string>
    <string name="home_screen">Home screen</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="icon_badging_desc_off">Off</string>
    <string name="icon_badging_desc_on">On</string>
    <string name="icon_badging_service_title">Show notification dots</string>
    <string name="icon_badging_title">Notification dots</string>
    <string name="icon_provider_class" />
    <string name="icon_shape_circle">Circle</string>
    <string name="icon_shape_override_label">Change icon shape</string>
    <string name="icon_shape_override_label_location">on Home screen</string>
    <string name="icon_shape_override_progress">Applying icon shape changes</string>
    <string name="icon_shape_square">Square</string>
    <string name="icon_shape_squircle">Squircle</string>
    <string name="icon_shape_system_default">Use system default</string>
    <string name="icon_shape_teardrop">Teardrop</string>
    <string name="install_drop_target_label">Install</string>
    <string name="instant_app_resolver_class" />
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_moved">Item moved</string>
    <string name="item_removed">Item removed</string>
    <string name="lb_AVINUSA.com">AVINUSA.com</string>
    <string name="lb_A_switch_to_the_original_car_interface">A switch to the original car interface</string>
    <string name="lb_Access_Files_on_USB_and_SD">Access Files on USB and SD</string>
    <string name="lb_Android_App_Drawer">Android App Drawer</string>
    <string name="lb_Bluetooth_Disconnected">Bluetooth Disconnected</string>
    <string name="lb_Browser">Browser</string>
    <string name="lb_Discover_places_and_explore">Discover places and explore</string>
    <string name="lb_Display_original_car_info">Display original car info</string>
    <string name="lb_Do_not_watch_the_video_while_driving">Do not watch the video while driving</string>
    <string name="lb_Donot_watch_while_driving">Don´t watch while driving</string>
    <string name="lb_ES_file_browser">File Manager</string>
    <string name="lb_Hand_brake_pull">Pull</string>
    <string name="lb_Hand_brake_release">Release</string>
    <string name="lb_Navigate_for_you_in_real_time">Navigate for you in real time</string>
    <string name="lb_Oil_quantity">Fuel</string>
    <string name="lb_Open_more_apps">Open more apps</string>
    <string name="lb_Record_driving_video_and_sound">Record driving video and sound</string>
    <string name="lb_Resource_management">Resource management</string>
    <string name="lb_Seat_belt_No">No</string>
    <string name="lb_Seat_belt_Yes">Yes</string>
    <string name="lb_Support_USB_or_Wifi_connection">Support USB or Wifi connection</string>
    <string name="lb_System_Function_Settings">System Function Settings</string>
    <string name="lb_System_function_settings">System function settings</string>
    <string name="lb_Turn_on_the_Bluetooth_device_and_make_a_call">Turn on the Bluetooth device and make a call</string>
    <string name="lb_Vehicle_Information">Vehicle Information</string>
    <string name="lb_Web_browsing">Web browsing</string>
    <string name="lb_Wild_Nights">Wild Nights</string>
    <string name="lb_bt">Bluetooth</string>
    <string name="lb_bt_q5_ksw">BTPhone</string>
    <string name="lb_btmusic">BT Music</string>
    <string name="lb_dash_board">Dashboard</string>
    <string name="lb_dvr">DVR</string>
    <string name="lb_hd_video">HD Video</string>
    <string name="lb_main_menu">Main Menu</string>
    <string name="lb_music">Music</string>
    <string name="lb_navi">Navigation</string>
    <string name="lb_navi2">Navigate</string>
    <string name="lb_navi_q5_ksw">Navi</string>
    <string name="lb_no_device">No Device</string>
    <string name="lb_radio">Radio</string>
    <string name="lb_settings">Settings</string>
    <string name="lb_shoujihulian">PhoneLink</string>
    <string name="lb_shoujihulian_q5_ksw">P-Link</string>
    <string name="lb_video">Video</string>
    <string name="lb_yuanche_q5_ksw">Car Info</string>
    <string name="lbl_fri">FRI</string>
    <string name="lbl_mon">MON</string>
    <string name="lbl_sat">SAT</string>
    <string name="lbl_sun">SUN</string>
    <string name="lbl_thu">THU</string>
    <string name="lbl_tue">TUE</string>
    <string name="lbl_wed">WED</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="long_accessible_way_to_add_shortcut">Double-tap &amp; hold to pick up a shortcut or use custom actions.</string>
    <string name="long_press_shortcut_to_add">Touch &amp; hold to pick up a shortcut.</string>
</resources>