<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:launcher="http://schemas.android.com/apk/res-auto/com.android.launcher3" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.android.launcher3.views.ButtonPreference android:persistent="false" android:title="@string/icon_badging_title" android:key="pref_icon_badging" android:widgetLayout="@layout/notification_pref_warning">
        <intent android:action="android.settings.NOTIFICATION_SETTINGS">
            <extra android:name=":settings:fragment_args_key" android:value="notification_badging"/>
        </intent>
    </com.android.launcher3.views.ButtonPreference>
    <SwitchPreference android:persistent="true" android:title="@string/auto_add_shortcuts_label" android:key="pref_add_icon_to_home" android:summary="@string/auto_add_shortcuts_description" android:defaultValue="true"/>
    <SwitchPreference android:persistent="true" android:title="@string/allow_rotation_title" android:key="pref_allowRotation" android:summary="@string/allow_rotation_desc" android:defaultValue="@bool/allow_rotation"/>
    <ListPreference android:persistent="false" android:entries="@array/icon_shape_override_paths_names" android:title="@string/icon_shape_override_label" android:key="pref_override_icon_shape" android:summary="%s" android:defaultValue="" android:entryValues="@array/icon_shape_override_paths_values"/>
</PreferenceScreen>
