<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@drawable/qizhi_1024x600_yingfeinidi_beijing" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:textSize="26px" android:textColor="#fff" android:id="@+id/btnOriginaCar" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="71px" android:layout_marginTop="128px" android:text="@string/lb_yuanche_q5_ksw" android:drawableTop="@drawable/qizhi_1024x600_yingfeinidi_btn_yuanche"/>
    <Button android:textSize="26px" android:textColor="#fff" android:id="@+id/btnPhoneLink" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="309px" android:layout_marginTop="128px" android:text="@string/lb_shoujihulian" android:drawableTop="@drawable/qizhi_1024x600_yingfeinidi_btn_phonelink"/>
    <Button android:textSize="26px" android:textColor="#fff" android:id="@+id/btnMusic" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="549px" android:layout_marginTop="128px" android:text="@string/lb_music" android:drawableTop="@drawable/qizhi_1024x600_yingfeinidi_btn_music"/>
    <Button android:textSize="26px" android:textColor="#fff" android:id="@+id/btnVideo" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="788px" android:layout_marginTop="128px" android:text="@string/lb_video" android:drawableTop="@drawable/qizhi_1024x600_yingfeinidi_btn_video"/>
    <Button android:textSize="26px" android:textColor="#fff" android:id="@+id/btnNavi" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="71px" android:layout_marginTop="354px" android:text="@string/lb_navi" android:drawableTop="@drawable/qizhi_1024x600_yingfeinidi_btn_navi"/>
    <Button android:textSize="26px" android:textColor="#fff" android:id="@+id/btnSetting" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="309px" android:layout_marginTop="354px" android:text="@string/lb_settings" android:drawableTop="@drawable/qizhi_1024x600_yingfeinidi_btn_setting"/>
    <Button android:textSize="26px" android:textColor="#fff" android:id="@+id/btnBt" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="549px" android:layout_marginTop="354px" android:text="@string/lb_bt" android:drawableTop="@drawable/qizhi_1024x600_yingfeinidi_btn_bt"/>
    <Button android:textSize="26px" android:textColor="#fff" android:id="@+id/btnApps" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="788px" android:layout_marginTop="354px" android:text="@string/group_applications" android:drawableTop="@drawable/qizhi_1024x600_yingfeinidi_btn_apps"/>
</RelativeLayout>
