<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:launcher="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/OriginaCar" android:background="@drawable/kesaiwei_1280x480_evo_id6_gs_btn_yuanche" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="89px" android:layout_marginTop="9px"/>
    <ImageView android:id="@+id/KSW_Focus_select_4" android:background="@drawable/kesaiwei_1280x480_evo_id6_gs_yuanche_f" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="89px" android:layout_marginTop="9px"/>
    <TextView android:textSize="25sp" android:textColor="#aaaaaa" android:gravity="right|center_vertical|center_horizontal|center" android:layout_width="130px" android:layout_height="65px" android:layout_marginLeft="210px" android:layout_marginTop="315px" android:text="@string/lb_yuanche_q5_ksw"/>
    <Button android:id="@+id/btnESFile" android:background="@drawable/kesaiwei_1280x480_evo_id6_gs_btn_esfile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="369px" android:layout_marginTop="9px"/>
    <ImageView android:id="@+id/KSW_Focus_select_5" android:background="@drawable/kesaiwei_1280x480_evo_id6_gs_ziyuanguanli_f" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="369px" android:layout_marginTop="9px"/>
    <TextView android:textSize="25sp" android:textColor="#aaaaaa" android:gravity="right|center_vertical|center_horizontal|center" android:layout_width="130px" android:layout_height="65px" android:layout_marginLeft="489px" android:layout_marginTop="315px" android:text="@string/lb_ES_file_browser"/>
    <Button android:id="@+id/btnBrowser" android:background="@drawable/kesaiwei_1280x480_evo_id6_gs_btn_liulanqi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="648px" android:layout_marginTop="9px"/>
    <ImageView android:id="@+id/KSW_Focus_select_6" android:background="@drawable/kesaiwei_1280x480_evo_id6_gs_liulanqi_f" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="648px" android:layout_marginTop="9px"/>
    <TextView android:textSize="25sp" android:textColor="#aaaaaa" android:gravity="right|center_vertical|center_horizontal|center" android:layout_width="130px" android:layout_height="65px" android:layout_marginLeft="768px" android:layout_marginTop="315px" android:text="@string/lb_Browser"/>
    <Button android:id="@+id/dvr" android:background="@drawable/kesaiwei_1280x480_evo_id6_gs_btn_dvr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="928px" android:layout_marginTop="9px"/>
    <ImageView android:id="@+id/KSW_Focus_select_7" android:background="@drawable/kesaiwei_1280x480_evo_id6_gs_jiluyi_f" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="928px" android:layout_marginTop="9px"/>
    <TextView android:textSize="25sp" android:textColor="#aaaaaa" android:gravity="right|center_vertical|center_horizontal|center" android:layout_width="130px" android:layout_height="65px" android:layout_marginLeft="1048px" android:layout_marginTop="315px" android:text="@string/lb_dvr"/>
    <TextView android:textSize="20px" android:textColor="#aaaaaa" android:gravity="center_vertical" android:layout_width="120px" android:layout_height="120px" android:layout_marginLeft="104px" android:layout_marginTop="262px" android:text="@string/lb_A_switch_to_the_original_car_interface"/>
    <TextView android:textSize="20px" android:textColor="#aaaaaa" android:gravity="center_vertical" android:layout_width="120px" android:layout_height="120px" android:layout_marginLeft="384px" android:layout_marginTop="262px" android:text="@string/lb_Resource_management"/>
    <TextView android:textSize="20px" android:textColor="#aaaaaa" android:gravity="center_vertical" android:layout_width="120px" android:layout_height="120px" android:layout_marginLeft="664px" android:layout_marginTop="262px" android:text="@string/lb_Web_browsing"/>
    <TextView android:textSize="20px" android:textColor="#aaaaaa" android:gravity="center_vertical" android:layout_width="120px" android:layout_height="120px" android:layout_marginLeft="943px" android:layout_marginTop="262px" android:text="@string/lb_Record_driving_video_and_sound"/>
</RelativeLayout>
