<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:launcher="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/btnESFile" android:background="@drawable/kesaiwei_1280x480_evo_id6_btn_esfile_xiao" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="17px" android:layout_marginTop="90px"/>
    <ImageView android:id="@+id/KSW_Focus_select_6" android:background="@drawable/kesaiwei_1280x480_evo_id6_ziyuanguanli_xiao_f" android:visibility="gone" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="17px" android:layout_marginTop="90px"/>
    <TextView android:textSize="20sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="135px" android:layout_height="35px" android:layout_marginLeft="60px" android:layout_marginTop="98px" android:text="@string/lb_ES_file_browser"/>
    <Button android:id="@+id/dvr" android:background="@drawable/kesaiwei_1280x480_evo_id6_btn_dvr_xiao" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="230px" android:layout_marginTop="90px"/>
    <ImageView android:id="@+id/KSW_Focus_select_7" android:background="@drawable/kesaiwei_1280x480_evo_id6_jiluyi_xiao_f" android:visibility="gone" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="230px" android:layout_marginTop="90px"/>
    <TextView android:textSize="20sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="135px" android:layout_height="35px" android:layout_marginLeft="270px" android:layout_marginTop="98px" android:text="@string/lb_dvr"/>
    <Button android:id="@+id/yibiaopan" android:background="@drawable/kesaiwei_1280x480_evo_id6_btn_yibiaopan_xiao" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="443px" android:layout_marginTop="90px"/>
    <ImageView android:id="@+id/KSW_Focus_select_8" android:background="@drawable/kesaiwei_1280x480_evo_id6_xingchexinxi_xiao_f" android:visibility="gone" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="443px" android:layout_marginTop="90px"/>
    <TextView android:textSize="20sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="135px" android:layout_height="35px" android:layout_marginLeft="485px" android:layout_marginTop="98px" android:text="@string/lb_dash_board"/>
    <TextView android:textSize="16px" android:textColor="#a4afbb" android:layout_width="164px" android:layout_height="wrap_content" android:layout_marginLeft="35px" android:layout_marginTop="142px" android:text="@string/lb_Resource_management"/>
    <TextView android:textSize="16px" android:textColor="#a4afbb" android:layout_width="130px" android:layout_height="wrap_content" android:layout_marginLeft="245px" android:layout_marginTop="142px" android:text="@string/lb_Record_driving_video_and_sound"/>
    <TextView android:textSize="16px" android:textColor="#fff" android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/tv_youliang" android:layout_width="130px" android:layout_height="25px" android:layout_marginLeft="488px" android:layout_marginTop="142px" android:text=""/>
    <TextView android:textSize="16px" android:textColor="#fff" android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/tv_xushilicheng" android:layout_width="130px" android:layout_height="25px" android:layout_marginLeft="488px" android:layout_marginTop="168px" android:text=""/> ///////\10
    <Button android:id="@+id/phonelink" android:background="@drawable/kesaiwei_1280x480_evo_id6_btn_phonelink_xiao" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="654px" android:layout_marginTop="90px"/>
    <ImageView android:id="@+id/KSW_Focus_select_9" android:background="@drawable/kesaiwei_1280x480_evo_id6_shoujihulian_xiao_f" android:visibility="gone" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="654px" android:layout_marginTop="90px"/>
    <TextView android:textSize="20sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="135px" android:layout_height="35px" android:layout_marginLeft="700px" android:layout_marginTop="98px" android:text="@string/lb_shoujihulian"/>
    <Button android:id="@+id/apps" android:background="@drawable/kesaiwei_1280x480_evo_id6_btn_apps_xiao" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="867px" android:layout_marginTop="90px"/>
    <ImageView android:id="@+id/KSW_Focus_select_10" android:background="@drawable/kesaiwei_1280x480_evo_id6_yingyong_xiao_f" android:visibility="gone" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="867px" android:layout_marginTop="90px"/>
    <TextView android:textSize="20sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="135px" android:layout_height="35px" android:layout_marginLeft="910px" android:layout_marginTop="98px" android:text="@string/group_applications"/>
    <Button android:id="@+id/setting" android:background="@drawable/kesaiwei_1280x480_evo_id6_btn_settings_xiao" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="1079px" android:layout_marginTop="90px"/>
    <ImageView android:id="@+id/KSW_Focus_select_11" android:background="@drawable/kesaiwei_1280x480_evo_id6_shezhi_xiao_f" android:visibility="gone" android:layout_width="188px" android:layout_height="276px" android:layout_marginLeft="1079px" android:layout_marginTop="90px"/>
    <TextView android:textSize="20sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="142px" android:layout_height="35px" android:layout_marginLeft="1120px" android:layout_marginTop="98px" android:text="@string/lb_settings"/>
    <TextView android:textSize="16px" android:textColor="#a4afbb" android:layout_width="164px" android:layout_height="wrap_content" android:layout_marginLeft="670px" android:layout_marginTop="142px" android:text="@string/lb_Support_USB_or_Wifi_connection"/>
    <TextView android:textSize="16px" android:textColor="#a4afbb" android:layout_width="164px" android:layout_height="wrap_content" android:layout_marginLeft="882px" android:layout_marginTop="142px" android:text="@string/lb_Open_more_apps"/>
    <TextView android:textSize="16px" android:textColor="#a4afbb" android:layout_width="164px" android:layout_height="wrap_content" android:layout_marginLeft="1092px" android:layout_marginTop="142px" android:text="@string/lb_System_function_settings"/>
</RelativeLayout>
