<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:launcher="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/video" android:background="@drawable/kesaiwei_1280x480_evo_id6_btn_video" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="104px" android:layout_marginTop="0px"/>
    <ImageView android:id="@+id/KSW_Focus_select_3" android:background="@drawable/kesaiwei_1280x480_evo_id6_shipin_f" android:visibility="gone" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="104px" android:layout_marginTop="0px"/>
    <TextView android:textSize="25sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="200px" android:layout_height="59px" android:layout_marginLeft="180px" android:layout_marginTop="15px" android:text="@string/lb_video"/>
    <Button android:id="@+id/OriginaCar" android:background="@drawable/kesaiwei_1280x480_evo_id6_btn_yuanche" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="476px" android:layout_marginTop="0px"/>
    <ImageView android:id="@+id/KSW_Focus_select_4" android:background="@drawable/kesaiwei_1280x480_evo_id6_yuanche_f" android:visibility="gone" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="476px" android:layout_marginTop="0px"/>
    <TextView android:textSize="25sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="178px" android:layout_height="59px" android:layout_marginLeft="560px" android:layout_marginTop="15px" android:text="@string/lb_yuanche_q5_ksw"/>
    <Button android:id="@+id/btnBrowser" android:background="@drawable/kesaiwei_1280x480_evo_id6_btn_liulanqi" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="847px" android:layout_marginTop="0px"/>
    <ImageView android:id="@+id/KSW_Focus_select_5" android:background="@drawable/kesaiwei_1280x480_evo_id6_liulanqi_f" android:visibility="gone" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="847px" android:layout_marginTop="0px"/>
    <TextView android:textSize="25sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="180px" android:layout_height="59px" android:layout_marginLeft="930px" android:layout_marginTop="15px" android:text="@string/lb_Browser"/>
    <TextView android:textSize="22px" android:textColor="#a4afbb" android:layout_width="282px" android:layout_height="wrap_content" android:layout_marginLeft="145px" android:layout_marginTop="100px" android:text="@string/lb_Do_not_watch_the_video_while_driving"/>
    <TextView android:textSize="22px" android:textColor="#a4afbb" android:layout_width="282px" android:layout_height="wrap_content" android:layout_marginLeft="512px" android:layout_marginTop="100px" android:text="@string/lb_A_switch_to_the_original_car_interface"/>
    <TextView android:textSize="22px" android:textColor="#a4afbb" android:layout_width="282px" android:layout_height="wrap_content" android:layout_marginLeft="885px" android:layout_marginTop="100px" android:text="@string/lb_Web_browsing"/>
</RelativeLayout>
