<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:launcher="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/phonelink" android:background="@drawable/kesaiwei_1280x480_evo_id6_new_btn_phonelink" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="104px" android:layout_marginTop="0px"/>
    <ImageView android:id="@+id/KSW_Focus_select_9" android:background="@drawable/kesaiwei_1280x480_evo_id6_new_shoujihulian_f" android:visibility="gone" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="104px" android:layout_marginTop="0px"/>
    <TextView android:textSize="25sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="200px" android:layout_height="59px" android:layout_marginLeft="180px" android:layout_marginTop="15px" android:text="@string/lb_shoujihulian"/>
    <Button android:id="@+id/apps" android:background="@drawable/kesaiwei_1280x480_evo_id6_new_btn_apps" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="476px" android:layout_marginTop="0px"/>
    <ImageView android:id="@+id/KSW_Focus_select_10" android:background="@drawable/kesaiwei_1280x480_evo_id6_new_yingyong_f" android:visibility="gone" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="476px" android:layout_marginTop="0px"/>
    <TextView android:textSize="25sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="178px" android:layout_height="59px" android:layout_marginLeft="560px" android:layout_marginTop="15px" android:text="@string/group_applications"/>
    <Button android:id="@+id/setting" android:background="@drawable/kesaiwei_1280x480_evo_id6_new_btn_settings" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="847px" android:layout_marginTop="0px"/>
    <ImageView android:id="@+id/KSW_Focus_select_11" android:background="@drawable/kesaiwei_1280x480_evo_id6_new_shezhi_f" android:visibility="gone" android:layout_width="334px" android:layout_height="420px" android:layout_marginLeft="847px" android:layout_marginTop="0px"/>
    <TextView android:textSize="25sp" android:textColor="#ffffffff" android:gravity="left|center_vertical|center_horizontal|center" android:layout_width="180px" android:layout_height="59px" android:layout_marginLeft="930px" android:layout_marginTop="15px" android:text="@string/lb_settings"/>
    <TextView android:textSize="22px" android:textColor="#a4afbb" android:layout_width="282px" android:layout_height="wrap_content" android:layout_marginLeft="145px" android:layout_marginTop="100px" android:text="@string/lb_Support_USB_or_Wifi_connection"/>
    <TextView android:textSize="22px" android:textColor="#a4afbb" android:layout_width="282px" android:layout_height="wrap_content" android:layout_marginLeft="512px" android:layout_marginTop="100px" android:text="@string/lb_Open_more_apps"/>
    <TextView android:textSize="22px" android:textColor="#a4afbb" android:layout_width="282px" android:layout_height="wrap_content" android:layout_marginLeft="885px" android:layout_marginTop="100px" android:text="@string/lb_System_function_settings"/>
</RelativeLayout>
